--- a/homework.html
+++ b/homework.html
@@ -3,22 +3,21 @@
   <head>
     <meta charset="utf-8">
     <!-- Include code for favicon image, three stylesheets, Google Font, and responsive meta tags. -->
-    <meta charset="utf-8">
+    <link rel = "stylesheet" href = "https://fonts.googleapis.com/css2?family=Raleway&display=swap">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="images/logo_icon.png"/>
-    <link rel="stylesheet"  href="css/starter.css">
-    <link rel="stylesheet"  href="css/html5reset.css">
-    <link rel="stylesheet"  href="css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
+    <link rel="stylesheet" type="text/css" href="css/starter.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Super Slick Co.</title>
   </head>
   <body>
-    <a class = "skip" href="">Skip to Main Content</a>
+    <a class = "skip" href="#main">Skip to Main Content</a>
     <header>
       <img src="images/logo.png" alt="logo" id = "logo">
       <nav>
         <ul class="nav_links">
-          <li class="nav_item"><a href="#about">About</a></li>
+          <li class="nav_item"><a href="#main">About</a></li>
           <li class="nav_item"><a href="#pricing">Pricing</a></li>
           <li class="nav_item"><a href="#gallery">Gallery</a></li>
         </ul>
